--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <p>
         <h1>Sulav Dhakal</h1>
         <h4>402 Filhiol Monroe, LA | 318-884-7596 | dhakal_sulav@icloud.com </h4>
-        <hr>
+        
         </p>
-
+        <img src ="./profile.jpg" alt = "Photo" height="220" width="180"/>
+        <hr>
         <p>
             <h2><u>Objective</u></h2>
             <p>
